# smc-tracker

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  Dockerfile  HARMONIC_MVP.md  PLAN.md  README.md  RESUME_OKX.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: ralph-loop.1782021935-4720.local.md  ralph-loop.local.md
config/: config.example.yaml  exchange_wallets.yaml  meme_markets.yaml
deploy/: backup.sh  deploy.sh  healthcheck.sh  nginx-smc.conf  smc-dashboard.service  smc-monitor.service
scripts/: actionability.py  alpha_audit.py  analyze_address.py  analyze_pumps.py  audit.py  audit_consensus_strength.py  audit_copytrade_latency.py  audit_expansion_persistence.py  audit_parkinson_efficiency.py  audit_smart_money_persistence.py  backtest.py  backtest_harmonic.py  bench_backtest.py  bench_latency.py  bitget_oi_stream.py  bitget_snapshot.py  build_meme_list.py  combined_score.py  crontab.example  diag_signal_inversion.py  fetch_bitget_history.py  final_checks.py  final_rules.py  hl_meme_smoke.py  hl_orderbook.py  knn_backtest.py  llm_analyze.py  okx_stream.py  onchain_smoke.py  poll_monitor.py  predictability_analysis.py  prod_accuracy.py  report.py  round1_atr2_confluence.py  run_harmonic_strategy.py  scan_correlations.py  score_backtest.py  smoke_ws.py  telegram_setup.py  test_telegram.py  (+7 more)
tests/: test_address_analyzer.py  test_address_analyzer_b3.py  test_address_dossier.py  test_address_monitor.py  test_all_signals.py  test_app_meme_callback.py  test_app_monitored_wiring.py  test_app_pipeline.py  test_app_vol_board.py  (+132 more)
(+171 files in other folders)
