[project]
name = "smc-tracker"
version = "0.1.0"
description = "基于 Hyperliquid 的 SMC 聪明钱实时追踪与信号系统（低延迟）"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "aiohttp>=3.10",
    "orjson>=3.10",
    "numpy>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
